--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ hahaha you are a herb- <!DOCTYPE html>
         // Load all food images from the /images/ directory
         foodImages.push(loadImage('/images/garlic.png'));
         foodImages.push(loadImage('/images/pom.png'));
+      foodImages.push(loadImage('/images/farfalle.png'));
         foodImages.push(loadImage('/images/basil.png'));
         foodImages.push(loadImage('/images/pizza.png'));
         customFont = loadFont('fonts/the.otf');
