--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@ hahaha you are a herb- <!DOCTYPE html>
       <img id="menu-icon" src="/images/menu-icon.png" alt="Menu">
     </a>
     <div id="dropdown-menu">
-      <a href="#section1">Top</a>
-      <a href="#section2">Image</a>
-      <a href="#section3">Bottom</a>
+      <a href="#section1">Meat</a>
+      <a href="#section1">Entrees</a>
+      <a href="#section2">Pizza</a>
+      <a href="#section3">Sauce</a>
     </div>
   </div>
 
