--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ hahaha you are a herb- <!DOCTYPE html>
 
     #dropdown-menu a:hover {
       background-color: transparent;
-      color: #f4d35e;
+      color: #c72a2a;
     }
 
     /* Keep dropdown visible on hover */
