--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <div id="sketch-container"></div>
 
   <!-- PAGE CONTENT -->
-  <div class="section" id="section1"><div class="section-content">The Food Gallery</div></div>
+<div class="section" id="section1"><div class="section-content">The Food Gallery</div></div>
 
   <div class="section" id="section2">
     <div class="section-content">
@@ -169,7 +169,9 @@
     </div>
   </div>
 
-  <div class="section" id="section3"><div class="section-content"></div></div>
+  <div class="section" id="section3">
+    <img src="/images/table.png" style="width: 100%; height: 100%; object-fit: cover;" alt="Table Setting">
+  </div>
 
   <!-- P5 SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
