--- a/index.html
+++ b/index.html
@@ -179,7 +179,35 @@
     max-width: 150px; /* Smaller on mobile */
   }
 }
+.signature-container {
+  text-align: center;
+  margin-top: 2rem;
+}
 
+.signature-link {
+  display: inline-block;
+  transition: all 0.3s ease;
+}
+
+.signature {
+  max-width: 200px;
+  height: auto;
+  opacity: 0.9;
+  transition: all 0.3s ease;
+  filter: brightness(100%); /* Initial state */
+}
+
+.signature-link:hover .signature {
+  filter: brightness(0) saturate(100%) invert(15%) sepia(90%) saturate(5000%) hue-rotate(350deg) brightness(90%) contrast(100%);
+  opacity: 1;
+  transform: scale(1.05); /* Optional slight zoom on hover */
+}
+
+@media (max-width: 768px) {
+  .signature {
+    max-width: 150px;
+  }
+}
     
   </style>
 </head>
@@ -204,7 +232,7 @@
   <!-- PAGE CONTENT -->
 <div class="section" id="section1"><div class="section-content">The Food Gallery</div></div>
 
- <div class="section" id="section2">
+<div class="section" id="section2">
   <div class="section-content">
     <div class="about-text">
       <p>The Food Gallery was originally a project I created during my sophomore year at UW–Madison. It was for a coding and art class, where our final project was to take the HTML and CSS we had learned throughout the semester and build any kind of website.</p>
@@ -216,13 +244,14 @@
       <p>I hope you like my illustrations and enjoy my recipes. Thanks for stopping by!</p>
       
       <!-- Add this signature image container -->
-      <div class="signature-container">
-        <img src="/images/sig.png" alt="Signature" class="signature">
+       <div class="signature-container">
+        <a href="https://bpsherman.myportfolio.com/home" target="_blank" class="signature-link">
+          <img src="/images/sig.png" alt="Signature" class="signature">
+        </a>
       </div>
     </div>
   </div>
 </div>
-
    <div class="section" id="section3">
     <!-- Table background -->
     <img src="/images/table.png" class="table-background" alt="Table Setting">
