--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
     <a href="/" id="home-link">
       <img id="menu-icon" src="/images/menu-icon.png" alt="Menu">
     </a>
-    <div id="dropdown-menu">
-      <a href="#section1">Meat</a>
-      <a href="#section1">Entrees</a>
-      <a href="#section2">Pizza</a>
-      <a href="#section3">Sauce</a>
-    </div>
+   <div id="dropdown-menu">
+  <a href="meat.html">Meat</a>
+  <a href="entrees.html">Entrees</a>
+  <a href="pizza.html">Pizza</a>
+  <a href="sauces.html">Sauces</a>
+</div>
   </div>
 
   <!-- SKETCH CONTAINER -->
