--- a/index.html
+++ b/index.html
@@ -252,13 +252,12 @@
     </div>
   </div>
 </div>
-   <div class="section" id="section3">
-    <!-- Table background -->
-    <img src="/images/table.png" class="table-background" alt="Table Setting">
-    
-    <!-- Pizza foreground -->
+ <div class="section" id="section3">
+  <img src="/images/table.png" class="table-background" alt="Table Setting">
+  <a href="pizza.html" class="pizza-link">
     <img src="/images/pizza.png" class="pizza-foreground" alt="Pizza">
-  </div>
+  </a>
+</div>
 
   <!-- P5 SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
