--- a/index.html
+++ b/index.html
@@ -208,6 +208,24 @@
     max-width: 150px;
   }
 }
+    .pizza-link {
+  position: absolute;
+  width: 33.33%;
+  left: 5%;
+  bottom: 10%;
+  z-index: 2;
+  transition: transform 0.3s ease;
+}
+
+.pizza-link:hover {
+  transform: scale(1.05);
+}
+
+.pizza-foreground {
+  width: 100%;
+  height: auto;
+  max-width: 50vh;
+}
     
   </style>
 </head>
