--- a/pizza.html
+++ b/pizza.html
@@ -1,1 +1,40 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pizza Recipes | The Food Gallery</title>
+  <!-- Copy the same <style> section from your index.html -->
+  <style>
+    /* Paste all your existing CSS here */
+  </style>
+</head>
+<body>
+  <!-- Copy your menu structure from index.html -->
+  <div id="menu-container">
+    <a href="/" id="home-link">
+      <img id="menu-icon" src="/images/menu-icon.png" alt="Menu">
+    </a>
+    <div id="dropdown-menu">
+      <a href="meat.html">Meat</a>
+      <a href="entrees.html">Entrees</a>
+      <a href="pizza.html">Pizza</a>
+      <a href="sauces.html">Sauces</a>
+    </div>
+  </div>
+
+  <!-- Page-specific content -->
+  <div class="section" id="section1">
+    <div class="section-content">
+      <h1>Pizza Recipes</h1>
+      <!-- Add your pizza recipes content here -->
+    </div>
+  </div>
+
+  <!-- Copy your P5 script from index.html -->
+  <script>
+    // Paste your existing P5 script here
+  </script>
+</body>
+</html>
