--- a/pizza.html
+++ b/pizza.html
@@ -12,17 +12,21 @@
 </head>
 <body>
   <!-- Copy your menu structure from index.html -->
+
+
+  <!-- MENU HTML -->
   <div id="menu-container">
     <a href="/" id="home-link">
       <img id="menu-icon" src="/images/menu-icon.png" alt="Menu">
     </a>
-    <div id="dropdown-menu">
-      <a href="meat.html">Meat</a>
-      <a href="entrees.html">Entrees</a>
-      <a href="pizza.html">Pizza</a>
-      <a href="sauces.html">Sauces</a>
-    </div>
+   <div id="dropdown-menu">
+  <a href="meat.html">Meat</a>
+  <a href="entrees.html">Entrees</a>
+  <a href="pizza.html">Pizza</a>
+  <a href="sauces.html">Sauces</a>
+</div>
   </div>
+
 
   <!-- Page-specific content -->
   <div class="section" id="section1">
