--- a/entrees.html
+++ b/entrees.html
@@ -4,11 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Entree Recipes | The Food Gallery</title>
-  <!-- [Same style section as above] -->
+  <style>
+    #menu-container {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 2;
+      padding-bottom: 20px;
+    }
+
+    #home-link {
+      display: block;
+      text-decoration: none;
+    }
+
+    #menu-icon {
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      display: block;
+      transition: filter 0.2s ease;
+    }
+
+    #home-link:hover #menu-icon {
+      filter: brightness(0) saturate(100%) invert(84%) sepia(32%) saturate(1194%) hue-rotate(327deg) brightness(101%) contrast(91%);
+    }
+
+    #dropdown-menu {
+      display: none;
+      position: absolute;
+      top: 100%;
+      right: 0;
+      background-color: transparent;
+      border: none;
+      box-shadow: none;
+      z-index: 3;
+    }
+
+    #dropdown-menu a {
+      display: block;
+      padding: 10px 0;
+      color: #333;
+      text-decoration: none;
+      white-space: nowrap;
+      font-size: 1.2rem;
+      text-align: right;
+      transition: color 0.2s ease;
+    }
+
+    #dropdown-menu a:hover {
+      background-color: transparent;
+      color: #c72a2a;
+    }
+
+    #menu-container:hover #dropdown-menu {
+      display: block;
+    }
+  </style>
 </head>
 <body>
-  <!-- [Same menu structure as above] -->
+  <!-- MENU HTML -->
+  <div id="menu-container">
+    <a href="/" id="home-link">
+      <img id="menu-icon" src="/images/menu-icon.png" alt="Menu">
+    </a>
+    <div id="dropdown-menu">
+      <a href="meat.html">Meat</a>
+      <a href="entrees.html">Entrees</a>
+      <a href="pizza.html">Pizza</a>
+      <a href="sauces.html">Sauces</a>
+    </div>
+  </div>
 
+  <!-- Page-specific content -->
   <div class="section" id="section1">
     <div class="section-content">
       <h1>Entree Recipes</h1>
@@ -16,6 +84,8 @@
     </div>
   </div>
 
-  <!-- [Same P5 script as above] -->
+  <script>
+    // Your existing P5 script here
+  </script>
 </body>
 </html>
