--- a/entrees.html
+++ b/entrees.html
@@ -72,7 +72,7 @@
       <a href="meat.html">Meat</a>
       <a href="entrees.html">Entrees</a>
       <a href="pizza.html">Pizza</a>
-      <a href="sauces.html">Sauces</a>
+      <a href="sauces.html">Sauce</a>
     </div>
   </div>
 
