--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   <a href="meat.html">Meat</a>
   <a href="entrees.html">Entrees</a>
   <a href="pizza.html">Pizza</a>
-  <a href="sauces.html">Sauces</a>
+  <a href="sauce.html">Sauces</a>
 </div>
   </div>
 
