--- a/pizza.html
+++ b/pizza.html
@@ -81,7 +81,7 @@
   <a href="meat.html">Meat</a>
   <a href="entrees.html">Entrees</a>
   <a href="pizza.html">Pizza</a>
-  <a href="sauces.html">Sauce</a>
+  <a href="sauce.html">Sauce</a>
 </div>
   </div>
 
