--- a/index.html
+++ b/index.html
@@ -278,20 +278,19 @@
 </div>
 
   <!-- P5 SCRIPT -->
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.min.js"></script>
   <script>
-    let foodImages = []; // Array to hold ALL images (farfalle + foods)
+    let foodImages = [];
     let icons = [];
     const iconCount = 15;
     let customFont;
     let speedMultiplier = 1.0;
+    let baseSpeed = 1.0; // New base speed variable
     let scrollTimeout;
     let lastScrollTop = 0;
     let direction = 1;
 
     function preload() {
-        // Load ALL images (farfalle first, then the food images)
-        foodImages.push(loadImage('assets/farfalle.png')); // Keep original farfalle
+        foodImages.push(loadImage('assets/farfalle.png'));
         foodImages.push(loadImage('/images/garlic.png'));
         foodImages.push(loadImage('/images/pom.png'));
         foodImages.push(loadImage('/images/basil.png'));
@@ -303,6 +302,9 @@
         let canvas = createCanvas(windowWidth, windowHeight);
         canvas.parent('sketch-container');
 
+        // Detect mobile and adjust base speed
+        baseSpeed = isMobile() ? 2.5 : 1.0; // 2.5x faster on mobile
+
         textAlign(CENTER, CENTER);
         textSize(80);
         textStyle(BOLD);
@@ -311,10 +313,16 @@
         for (let i = 0; i < iconCount; i++) {
             let x = i * (width / iconCount) - random(50);
             let y = random(height);
-            let speed = random(0.2, 1.0);
-            let imgIndex = floor(random(foodImages.length)); // Randomly select from ALL images
+            let speed = random(0.2, 1.0) * baseSpeed; // Apply base speed multiplier
+            let imgIndex = floor(random(foodImages.length));
             icons.push({ x, y, speed, imgIndex });
         }
+    }
+
+    // Mobile detection function
+    function isMobile() {
+        return window.matchMedia("(max-width: 768px)").matches || 
+               window.innerWidth < 768;
     }
 
     function draw() {
@@ -328,6 +336,8 @@
         fill(fadedColor);
         textFont(customFont);
         text('The Food Gallery', width / 2, height / 2);
+
+        for (let icon of icons) {
 
         for (let icon of icons) {
             let currentImg = foodImages[icon.imgIndex]; // Get the randomly assigned image
