--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             image(currentImg, icon.x, icon.y, imgWidth, imgHeight);
 
             // Move icon with direction
-            icon.x += direction * icon.speed * speedMultiplier;
+            icon.x += direction * icon.speed * speedMultiplier * baseSpeed;
 
             if (direction === 1 && icon.x > width) {
                 icon.x = -imgWidth;
