--- a/index.html
+++ b/index.html
@@ -410,6 +410,15 @@
             speedMultiplier = 1.0;
         }, 150);
     }, { passive: true });
+
+         }
+    }
+
+    function windowResized() {
+        // Re-check mobile status when window is resized
+        baseSpeed = isMobile() ? 2.5 : 1.0;
+        resizeCanvas(windowWidth, windowHeight);
+    }
   </script>
 
 </body>
