--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       font-weight: normal;
     }
 
-    @media (max-width: 768px) {
+@media (max-width: 768px) {
       .section-content {
         padding: 0 1rem;
         box-sizing: border-box;
@@ -72,6 +72,17 @@
         font-size: 1rem;
         padding: 1rem;
       }
+
+   #sketch-container {
+    font-size: 3rem; /* Reduce text size on mobile */
+  }
+  
+  .section-content {
+    padding: 0 20px; /* Add side padding */
+    box-sizing: border-box;
+    width: 100%;
+  }
+}
     }
 
     #menu-container {
