--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   height: 130vh; /* Almost full viewport height */
   width: auto; /* Maintain aspect ratio */
   left: 0; /* Stick to the left edge */
-  bottom: 5%; /* Slight offset from bottom */
+  bottom: 0; /* Slight offset from bottom */
   z-index: 2;
   transition: transform 0.3s ease;
   max-height: 130vh; /* Prevent touching edges */
