--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   height: 90vh; /* Reduced from 130vh */
   width: auto;
   left: 0;
-  bottom: 0; /* Or adjust if needed (e.g., bottom: -10% to show more) */
+  bottom: -50%; /* Or adjust if needed (e.g., bottom: -10% to show more) */
   z-index: 2;
   max-height: 100vh; /* Ensures it never exceeds screen height */
 }
