--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
       z-index: 2;
       transition: transform 0.3s ease;
     }
+
+    @import url('https://fonts.googleapis.com/css2?family=Futura&display=swap');
   </style>
 </head>
 <body>
