--- a/index.html
+++ b/index.html
@@ -104,16 +104,19 @@
     }
 
     /* Updated link styles */
-    #dropdown-menu a {
-      display: block;
-      padding: 10px 0;
-      color: #333;
-      text-decoration: none;
-      white-space: nowrap;
-      font-size: 1.2rem;
-      text-align: right;
-      transition: color 0.2s ease;
-    }
+  
+#dropdown-menu a {
+  display: block;
+  padding: 10px 0;
+  color: #333;
+  text-decoration: none;
+  white-space: nowrap;
+  font-size: 1.2rem;
+  text-align: right;
+  transition: color 0.2s ease;
+  font-family: 'Futura', 'Trebuchet MS', Arial, sans-serif; /* Added this line */
+  font-weight: 500; /* Adjust if needed */
+}
 
     #dropdown-menu a:hover {
       background-color: transparent;
