--- a/meat.html
+++ b/meat.html
@@ -66,16 +66,19 @@
       z-index: 3;
     }
 
-    #dropdown-menu a {
-      display: block;
-      padding: 10px 0;
-      color: #333;
-      text-decoration: none;
-      white-space: nowrap;
-      font-size: 1.2rem;
-      text-align: right;
-      transition: color 0.2s ease;
-    }
+  
+#dropdown-menu a {
+  display: block;
+  padding: 10px 0;
+  color: #333;
+  text-decoration: none;
+  white-space: nowrap;
+  font-size: 1.2rem;
+  text-align: right;
+  transition: color 0.2s ease;
+  font-family: 'Futura', 'Trebuchet MS', Arial, sans-serif; /* Added this line */
+  font-weight: 500; /* Adjust if needed */
+}
 
     #dropdown-menu a:hover {
       background-color: transparent;
@@ -96,6 +99,8 @@
       color: #5c4d3c; /* Earthy brown for headings */
       font-size: 3rem;
     }
+@import url('https://fonts.googleapis.com/css2?family=Futura&display=swap');
+    
   </style>
 </head>
 <body>
