--- a/meat.html
+++ b/meat.html
@@ -230,7 +230,7 @@
         <h1>Meat Recipes</h1>
         <p>Discover our collection of hearty meat dishes, featuring classic recipes with modern twists that will satisfy any carnivorous craving.</p>
       </div>
-      <img src="/images2/cutlet.png" alt="Cutlet Recipe" class="food-image right-image">
+      <img src="/images2/c.png" alt="Cutlet Recipe" class="food-image right-image">
     </div>
   </div>
 
