--- a/pizza.html
+++ b/pizza.html
@@ -198,7 +198,7 @@
   <!-- First Section with Pizza Image and Text -->
   <div class="section" id="section1">
     <div class="image-container">
-      <img src="images2/pizza.gif" alt="Delicious Pizza" class="food-image">
+      <img src="images2/pizza.png" alt="Delicious Pizza" class="food-image">
       <div class="recipe-content">
         <h1>Pizza</h1>
         <p>Experience our authentic pizza made with the finest ingredients and traditional techniques.</p>
