--- a/sauce.html
+++ b/sauce.html
@@ -79,7 +79,7 @@
     }
     
     h2 {
-      font-size: 3.5rem; /* Larger header size */
+      font-size: 5rem; /* Larger header size */
       margin-bottom: 1.5rem;
       text-transform: uppercase;
     }
@@ -283,7 +283,7 @@
         <h1>Sauces</h1>
         <p>Discover our collection of flavorful sauces, from classic recipes to modern creations that will elevate any dish.</p>
       </div>
-      <img src="images2/RS.png" alt="Red Sauce" class="food-image right-image">
+      <img src="images2/RS.png" alt="Marinara Sauce" class="food-image right-image">
     </div>
   </div>
 
@@ -322,7 +322,7 @@
   <!-- Third Section - Red Sauce -->
   <div class="section" id="section3">
     <div class="recipe-content">
-      <h2 class="redsauce-header">RED SAUCE</h2>
+      <h2 class="redsauce-header">Marinara Sauce</h2>
       
       <div class="ingredients">
         <h3>Ingredients</h3>
