--- a/sauce.html
+++ b/sauce.html
@@ -322,7 +322,7 @@
   <!-- Third Section - Red Sauce -->
   <div class="section" id="section3">
     <div class="recipe-content">
-      <h2 class="redsauce-header">Marinara Sauce</h2>
+      <h2 class="redsauce-header">Marinara</h2>
       
       <div class="ingredients">
         <h3>Ingredients</h3>
