--- a/sauce.html
+++ b/sauce.html
@@ -259,6 +259,15 @@
         max-height: 45vh;
       }
     }
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC:wght@700&display=swap" rel="stylesheet">
+<style>
+.pesto-header {
+  font-family: 'Alegreya SC', serif;
+  color: #3a7a22;
+  font-size: 3.5rem;
+  letter-spacing: 1px;
+}
+
   </style>
 </head>
 <body>
